--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -16,10 +16,11 @@
   
 <script>
 //Recipe Search Function
+// Someone put this inside a recipe.js file for me?
     function recipeSearch(){
         //alert("Clicked!");
       
-        console.log("Hello");
+        console.log("EDAMAME BEAN API BEGIN");
             
         //Clears the table's contents after each new search
         $("#table").html("");
