--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -26,7 +26,7 @@
         $("#label").html("");
         $("#image").html("");
         $("#source").html("");
-        $("sourceURL").html("");
+        $("oneSpan").html("");
 
         //AJAX request from the BetterDoctor API https://api.betterdoctor.com
         $.ajax({
