--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,22 +1,76 @@
 <html>
   <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <title>
+    Recipe Vision
+    </title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+        
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script rel="javascript" type="text/javascript" href="js/jquery-1.11.3.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+        <script language="javascript" type ="text/javascript"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script rel="javascript" type="text/javascript" href="js/jquery-1.11.3.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-    <script language="javascript" type ="text/javascript"></script>
-
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
+  <style>
+  #divOne{
+    margin: auto;
+    width: 50%;
+    border: 5px solid black;
+    padding: 30px;
+    background-color:white;
+    border-radius: 25px;
+    font-style: oblique;
+    background-color: lightblue;
+
+
+
+  }
+  #jumbo{
+     background-image: url("https://i.imgur.com/JcsaUOC.png");
+     background-color:white;
+     
+     
+     
+  }
+  
+  #title1{
+     font-family: "Times New Roman", Times, serif;
+     font-size:4em;
+     font-weight:bold;
+     color:white;
+      text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+
+  }
+  #navBar{
+     font-family: "Times New Roman", Times, serif;
+     font-size:2.5em;
+     font-weight:bold;
+     color:white;
+      text-shadow: 1px 1px 2px white, 0 0 25px black, 0 0 5px black;
+  }
+  .footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
+}
+  </style>
   
 <script>
+
+ 
+
+
 //Recipe Search Function
-// Someone put this inside a recipe.js file for me?
     function recipeSearch(){
         //alert("Clicked!");
       
@@ -50,11 +104,14 @@
             success: function(data,status) {
               console.log(data);
               console.log(data.length);
-              for(var i = 0 ; i <3;i++){
+              for(var i = 0 ; i <5;i++){
               console.log(data["hits"][i]["recipe"]["label"]);
-              $("#oneSpan").append("<h1><a href='" + data["hits"][i]["recipe"]["url"] + "'>" + data["hits"][i]["recipe"]["label"] + "</a></h1>" + "<br>" +
-                                  "<img src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" +
-                                  "<h1>Calories: " + data["hits"][i]["recipe"]["calories"]+"</h1><br>" );
+              $("#oneSpan").append("<br><div class='container' id='divOne'>" + "<h1><a href='" + data["hits"][i]["recipe"]["url"] + "'  target='_blank'>" + data["hits"][i]["recipe"]["label"] + "</a></h1>" + "<br>" +
+                                  "<h1>Calories: " +  Math.round(data["hits"][i]["recipe"]["calories"])+"</h1><br>" +
+                                  "<h1>Diet Labels: " + data["hits"][i]["recipe"]["dietLabels"] + "</h1><br>" + 
+                             
+                                  "<img src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" + "</div>")
+                                  ;
        
        
           //    $("#label").append(data["hits"][i]["recipe"]["label"] + "<br>");
@@ -80,43 +137,112 @@
 </script>
   
   <body>
-      <div class="jumbotron text-center">
-        <h1>Recipe Vision</h1>
-        
-            <ul class="nav justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Main</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Food</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Links are Disabled</a>
-            </li>
-            </ul>
-        </div>
-
-           <div class="container">
-        <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search" name="search" id="searchValue">
-      <div class="input-group-btn">
-        <button class="btn btn-default" type="submit" onclick="recipeSearch()">
-          Search
-          </button>
-      </div>
-    </div>
-    <div class="container">
-
-<center>
-  <span id="oneSpan"></span>
-</center>
-
-       
+    
+    <div id="fb-root"></div>
+          <script>
+                 window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '168050303776214',
+          cookie     : true,
+          xfbml      : true,
+          version    : 'v2.10'
+        });
+          
+        FB.AppEvents.logPageView();   
+          
+      };
+          
 
     
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "https://connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+       
+       
+     
+      </script>
+      <!-- Start Layout -->
+      <div class="jumbotron text-center" id="jumbo">
+        <h1 id="title1">Recipe Vision</h1>
+      
+        </div>
+      <hr>
+      <div class="container">
+        <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <a class="navbar-brand" href="#">Navbar</a>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown link
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+          </nav>
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search" name="search" id="searchValue">
+          <div class="input-group-btn">
+              <button class="btn btn-default" type="submit" onclick="recipeSearch()" id="button1">
+              Search
+              </button>
+          </div>
+        </div>
+    
+        <script>
+            
+        document.getElementById("searchValue")
+            .addEventListener("keyup", function(event) {
+            event.preventDefault();
+            if (event.keyCode == 13) {
+                document.getElementById("button1").click();
+            }
+        });
+        </script>
+        
+        
+    <div class="container">
+    <center>
+      <span id="oneSpan"></span>
+    </center>
+    </div>
+    <br><br><br><br>
+       <div class="fb-login-button" data-max-rows="1" data-size="small" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" data-use-continue-as="false"></div>
+            <div id="shareBtn" class="btn btn-success clearfix">Share</div>
+      
+        <script>
+        document.getElementById('shareBtn').onclick = function() {
+          FB.ui({
+            method: 'share',
+            display: 'popup',
+            href: 'https://pacemaker438.herokuapp.com/',
+          }, function(response){});
+        }
+        </script>
+      
+    
     </body>  
-  
+
+
 </html>
