--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   
+  
+  <!-- styles need to be including in a css folder -->
   <style>
   #divOne{
   margin: auto;
@@ -50,15 +52,8 @@
   color:white;
   text-shadow: 1px 1px 2px white, 0 0 25px black, 0 0 5px black;
   }
-  .footer {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  padding: 1rem;
-  background-color: #efefef;
-  text-align: center;
-  }
+ 
+
   </style>
   
 <script>
@@ -155,8 +150,9 @@
         <h1 id="title1">Recipe Vision</h1>
       
         </div>
-      <hr>
+
       <div class="container">
+        <hr>
         <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -225,6 +221,8 @@
           }, function(response){});
         }
         </script>
+        
+
       
     
     </body>  
