--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,20 +21,39 @@
   
   <!-- styles need to be including in a css folder -->
   <style>
+  #divOne{
+  margin: auto;
+  width: 50%;
+  border: 5px solid black;
+  padding: 30px;
+  background-color:white;
+  border-radius: 25px;
+  font-style: oblique;
+  background-color: lightblue;
+  }
+  #jumbo{
+  background-image: url("https://i.imgur.com/JcsaUOC.png");
+  background-color:white;
   
-    #divOne{
-    margin: auto;
-    width: 50%;
-    border: 5px solid black;
-    padding: 30px;
-    background-color:white;
-    border-radius: 25px;
-    font-style: oblique;
-    background-color: lightblue;
-    }
+  }
+  
+  #title1{
+  font-family: "Times New Roman", Times, serif;
+  font-size:4em;
+  font-weight:bold;
+  color:white;
+  text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;
+  
+  }
+  #navBar{
+  font-family: "Times New Roman", Times, serif;
+  font-size:2.5em;
+  font-weight:bold;
+  color:white;
+  text-shadow: 1px 1px 2px white, 0 0 25px black, 0 0 5px black;
+  }
+ 
 
-    
-   
   </style>
   
 <script>
@@ -44,27 +63,7 @@
 
 //Recipe Search Function
     function recipeSearch(){
-      var searchVAL = document.getElementById("searchValue").value;
-      console.log(searchVAL);
-      
-      // There must be a searchVAL for this to work.
- // if search value is equal to nothing -> do nothing
- // if search value is not equal to nothing -> do this whole function....
-  if(searchVAL != ''){
-    
-          var elem = document.getElementById("myBar");   
-              var width = 1;
-              var id = setInterval(frame, 10);
-              function frame() {
-                if (width >= 100) {
-                  clearInterval(id);
-                } else {
-              width++; 
-              elem.style.width = width + '%'; 
-                }
-              }
-   
-        
+        //alert("Clicked!");
       
         console.log("EDAMAM API");
             
@@ -94,7 +93,6 @@
             },
         
             success: function(data,status) {
-              
               console.log(data);
               console.log(data.length);
               for(var i = 0 ; i <5;i++){
@@ -105,9 +103,7 @@
                              
                                   "<img src='" +data["hits"][i]["recipe"]["image"] + "'>" + "<br>" + "</div>")
                                   ;
-                              
               }
-             
             },
         
             complete: function(data,status) { 
@@ -115,8 +111,8 @@
             }
         
 		});//AJAX
-  }
-} //End of recipeSearch() function.
+
+    } //End of recipeSearch() function.
         
 </script>
   
@@ -150,26 +146,50 @@
      
       </script>
       <!-- Start Layout -->
+      <div class="jumbotron text-center" id="jumbo">
+        <h1 id="title1">Recipe Vision</h1>
+      
+        </div>
 
-<% include templates/header.ejs %>
-        <label class="custom-file">
-        <input type="file" id="file" class="custom-file-input">
-        <span class="custom-file-control"></span>
-        </label>
+      <div class="container">
+        <hr>
+        <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+          <a class="navbar-brand" href="#">Navbar</a>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Dropdown link
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  <a class="dropdown-item" href="#">Action</a>
+                  <a class="dropdown-item" href="#">Another action</a>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </div>
+              </li>
+            </ul>
+          </div>
+          </nav>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="Search" name="search" id="searchValue" >
+          <input type="text" class="form-control" placeholder="Search" name="search" id="searchValue">
           <div class="input-group-btn">
               <button class="btn btn-default" type="submit" onclick="recipeSearch()" id="button1">
               Search
               </button>
           </div>
         </div>
-        
-  <div class="progress">
-    <div id="myBar" class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100" style="width:3%">
-
-    </div>
-  </div>
     
         <script>
             
